# MusicViz

./: .gitignore  CMakeLists.txt  README.md  plot_frames.ipynb  viz_fft.ipynb
src/: fft_from_file.cpp  fft_tests.cpp  fft_tests_2.cpp  main.cpp  play_sound.cpp  sfml_display.cpp  sfml_display_switch_flip.cpp
